--- a/exec007/index.html
+++ b/exec007/index.html
@@ -6,7 +6,8 @@
     <title>Outras formataçoes</title>
 </head>
 <body>
-    <h1>Outras Formataçoes</h1>
+
+    <h1>Outros tipos de Formatações</h1>
     <h2>Codigo Fonte-Pre-Formataçao</h2>
     <p>Public String none e um codigo em JavaScript</p>
     <p><code>Public String none e um codigo em JavaScript</code></p>
