--- a/exec022/fundo006.html
+++ b/exec022/fundo006.html
@@ -7,10 +7,7 @@
     <style>
         body {
             height: 100vh;
-            background-color: black;
-            background-image: url("imagens/wallpaper002.jpg");
-            background-position: center center;
-            background-repeat: no-repeat;
+            background: black url("imagens/wallpaper002.jpg") center center no-repeat  fixed;
             background-size: cover;
         }
         main {
@@ -28,8 +25,11 @@
         <h1>Teste de Imagem de Fundo</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, consequuntur in. Perferendis earum optio ex laboriosam nobis enim quas maiores, aliquam, quos, ullam placeat autem tempora numquam voluptatem aperiam similique? Magnam delectus explicabo ratione. Ab voluptatibus hic ipsum expedita quae maiores iusto reprehenderit molestias repellendus alias? Minima culpa tenetur fuga unde soluta voluptate recusandae beatae. Quo voluptates enim porro.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi doloribus saepe expedita perspiciatis quos officia labore harum, accusantium natus voluptates nisi, dolorum necessitatibus id sunt dicta at autem iusto quaerat, quas cumque numquam aliquid. Aliquam, repellat quod? Illo, qui perspiciatis? Alias ea consectetur voluptate eveniet delectus praesentium sequi illum maiores!</p>
+    
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quod quidem expedita sunt nisi ipsum voluptas saepe neque aut mollitia qui aperiam dolorum, cumque, est nobis ducimus fuga, error inventore. Odio ipsa assumenda excepturi debitis fugit blanditiis iusto accusamus itaque repudiandae fugiat ipsum perferendis facilis vel, consectetur obcaecati amet necessitatibus.</p>
-        
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quod quidem expedita sunt nisi ipsum voluptas saepe neque aut mollitia qui aperiam dolorum, cumque, est nobis ducimus fuga, error inventore. Odio ipsa assumenda excepturi debitis fugit blanditiis iusto accusamus itaque repudiandae fugiat ipsum perferendis facilis vel, consectetur obcaecati amet necessitatibus.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, quae facere nostrum itaque cumque nihil sunt tempora laborum minima minus quam eos fuga nobis, aspernatur beatae molestias reprehenderit atque, vel iste quibusdam delectus fugit nesciunt. Impedit eligendi expedita autem quibusdam distinctio, deleniti iure in dolores dolor vero necessitatibus vel aperiam enim rem voluptate beatae esse doloribus tempora veniam eaque harum, cum odio ipsum. Ab suscipit corrupti, voluptates molestias voluptate similique beatae expedita illo vitae soluta, sequi, impedit dignissimos quibusdam ipsam aspernatur enim unde praesentium. Illum consectetur fugiat totam eius dicta voluptatem ipsam. Beatae quibusdam nisi facilis distinctio quasi voluptatem error!</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit quidem assumenda nisi doloremque, dolor delectus praesentium, quas totam esse temporibus soluta, commodi nulla natus voluptatem doloribus nostrum. Commodi harum ad, doloremque facilis in repudiandae sapiente beatae dolore atque omnis dolorum deleniti maxime necessitatibus architecto nihil mollitia tenetur doloribus odit illum soluta voluptatem alias. Nesciunt repudiandae voluptatum soluta, earum dolorem at rerum exercitationem doloremque asperiores omnis ea consequatur consequuntur ducimus modi, vero molestiae sequi, voluptates aut ullam. Nisi quidem sint aliquid? Error quo eos consequuntur animi enim commodi molestiae ipsum aspernatur consequatur rerum, cumque repellat dolorum odit odio optio neque accusantium totam vitae iste. Porro voluptatum quae voluptatem vero, doloremque totam voluptate error, vitae placeat nulla unde iure quis, delectus quo ad harum sapiente aliquam blanditiis quia repellat voluptatibus autem! Est nisi doloremque ea quod, ut quo et harum architecto voluptas quas. Porro nulla ducimus, adipisci accusantium rerum tempore recusandae, aperiam quo fugiat ipsam ab dignissimos autem deleniti voluptatum reiciendis quaerat consequatur alias asperiores illo sint reprehenderit eveniet inventore. Voluptate maiores eligendi dolorem nam, obcaecati vel accusantium necessitatibus debitis architecto quas laboriosam praesentium unde distinctio laborum corporis neque ullam corrupti ut exercitationem fugiat eveniet, provident dolore, porro excepturi! Labore, cum quibusdam.</p>
     </main>
 </body>
 </html>
